/* Copyright 2012 MaidSafe.net limited

This MaidSafe Software is licensed under the MaidSafe.net Commercial License, version 1.0 or later,
and The General Public License (GPL), version 3. By contributing code to this project You agree to
the terms laid out in the MaidSafe Contributor Agreement, version 1.0, found in the root directory
of this project at LICENSE, COPYING and CONTRIBUTOR respectively and also available at:

http://www.novinet.com/license

Unless required by applicable law or agreed to in writing, software distributed under the License is
distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or
implied. See the License for the specific language governing permissions and limitations under the
License.
*/

package maidsafe.vault.protobuf;
import "maidsafe/vault/pmid_account_holder/pmid_account.proto";

message MaidAccountDbValue {
  required int32 average_cost = 1;
  required int32 count = 2;
}

message MaidAccountDbEntry {
  required uint32 type = 1;  // name and type == db key
  required bytes name = 2;
  required MaidAccountDbValue value = 3;
}

message MaidAccount {
  required bytes maid_name = 1;
  required bytes serialised_account_details = 2;
}

message MaidAccountDetails {
  repeated bytes serialised_pmid_registration = 1;
  repeated MaidAccountDbEntry db_entry = 2;
  repeated bytes serialised_unresolved_entry = 3;
}

// Used as data field in MM's Reply to Put request.
message Cost {
  required int32 cost = 1;
}
